<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewNoteDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1b262c"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/note_editor_toolbar_title"
        app:titleTextColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle">

        <RadioButton
            android:id="@+id/radioButtonEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:checked="true"
            android:buttonTint="#ff6768"
            android:fontFamily="@font/dosis_regular"
            android:text="@string/entry"
            android:textColor="#bbe1fa"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonDream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:buttonTint="#ff6768"
            android:fontFamily="@font/dosis_regular"
            android:text="@string/dream"
            android:textColor="#bbe1fa"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonToDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#ff6768"
            android:fontFamily="@font/dosis_regular"
            android:text="@string/ToDo"
            android:textColor="#bbe1fa"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/dosis_regular"
        android:hint="@string/note_editor_title_hint"
        android:inputType="text|textCapSentences"
        android:textSize="32sp"
        android:textColor="#bbe1fa"
        android:textColorHint="#bbe1fa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNewNoteDialog"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/dosis_regular"
        android:gravity="top|start"
        android:hint="@string/note_editor_content_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="4dp"
        android:textColor="#bbe1fa"
        android:textColorHint="#bbe1fa"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>